--- a/css/main.css
+++ b/css/main.css
@@ -1,13 +1,11 @@
-body,
-div,
-html {
+/* Reset */
+html, body, div {
   border: 0;
   margin: 0;
   padding: 0;
 }
 
-body,
-html {
+html, body {
   height: 100%;
   width: 100%;
 }
@@ -17,18 +15,18 @@ body {
   display: -ms-flexbox;
   display: flex;
   -webkit-flex-direction: column;
-  -ms-flex-direction: column;
-  flex-direction: column;
+      -ms-flex-direction: column;
+          flex-direction: column;
 }
 
-*,
-:after,
-:before {
+/* Box-sizing border-box */
+*, *:before, *:after {
   box-sizing: border-box;
 }
 
+/* Set up a default font and some padding to provide breathing room */
 body {
-  font-family: Roboto,Helvetica Neue,sans-serif;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
   font-size: 16px;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -36,7 +34,7 @@ body {
 
 p {
   font-weight: 400;
-  letter-spacing: .01em;
+  letter-spacing: 0.01em;
   line-height: 20px;
   margin-bottom: 1em;
   margin-top: 1em;
@@ -54,22 +52,20 @@ li {
 
 input {
   border: 1px solid #106cc8;
-  outline: none;
-  padding: 8px;
-}
-
-button,
-input {
   font-size: 14px;
   height: 40px;
+  outline: none;
+  padding: 8px;
 }
 
 button {
   background-color: #106cc8;
   border-style: none;
-  color: hsla(0,0%,100%,.87);
+  color: rgba(255, 255, 255, 0.87);
   cursor: pointer;
   display: inline-block;
+  font-size: 14px;
+  height: 40px;
   padding: 8px 18px;
   text-decoration: none;
 }
