--- a/app/home/home.component.css
+++ b/app/home/home.component.css
@@ -1,13 +1,18 @@
-:host {
-  display: block;
-  padding: 0 16px;
-}
+.grid-container {
+    display: grid;
+    grid-template-columns: auto auto auto;
+    padding: 10px;
+    
+  }
+  .grid-item {
+    padding: 20px;
+    font-size: 30px;
+    text-align: center;
+  }
 
-input {
-  width: 250px;
-}
+ 
 
-ul {
-  list-style-type: none;
-  padding: 0 0 0 8px;
-}
+  .icon{
+      width:60px;
+      height:60px;
+  }
