--- a/app/home/home.component.html
+++ b/app/home/home.component.html
@@ -1,10 +1,15 @@
-<p>Howdy! Here's a list of awesome computer scientists. Do you know any others? Add to the list yourself.</p>
 
-<form (submit)="addName()">
-  <input [(ngModel)]="newName" name="newName" placeholder="Awesome Computer Scientist">
-  <button type="submit">Add</button>
-</form>
 
-<ul>
-  <li *ngFor="let name of names">{{ name }}</li>
-</ul>
+    <div class="grid-container">
+           <a href="https://www.facebook.com/public/Hayden-Sookchand"> <div class="grid-item"> <img class="icon" src="app/images/facebook.png"></div></a>
+           <a href="https://twitter.com/haydensookchand"><div class="grid-item"> <img class="icon" src="app/images/twitter.png"></div></a>
+           <a href="https://za.linkedin.com/in/hayden-sookchand-57554867"> <div class="grid-item"> <img class="icon" src="app/images/linkedin.png"></div></a>  
+           <a href="https://vimeo.com/user54615125"> <div class="grid-item"> <img class="icon" src="app/images/vimeo.png"></div></a>  
+           <a href="x"><div class="grid-item"> <img class="icon" src="app/images/photos.png"></div></a>  
+           <a href="x"><div class="grid-item"> <img class="icon" src="app/images/hearts.png"></div></a>  
+           <a href="x"><div class="grid-item"> <img class="icon" src="app/images/android.png"></div></a>  
+           <a href="http://ariza.co.za/"> <div class="grid-item"> <img class="icon" src="app/images/ariza.png"></div>  </a>  
+           <a href="https://github.com/HaydenSookchand?tab=activity"><div class="grid-item"> <img class="icon" src="app/images/github.png"></div>    </a>           
+    </div>
+           
+      
